--- a/rca/project_styleguide/templates/patterns/pages/events/event_detail.html
+++ b/rca/project_styleguide/templates/patterns/pages/events/event_detail.html
@@ -91,7 +91,7 @@
 
                 <div class="section__row section__row--first section__row--last">
                     <div class="section__header grid">
-                        <h2 class="section__heading section__heading--secondary section__heading--tight heading heading--four">
+                        <h2 class="section__heading {% if speakers|length > 4 %}section__heading--primary{% else %}section__heading--secondary{% endif %} section__heading--tight heading heading--four">
                             {{ page.speaker_heading|default:"Speakers" }}
                         </h2>
                     </div>
