--- a/rca/static_src/sass/components/_accordion-block.scss
+++ b/rca/static_src/sass/components/_accordion-block.scss
@@ -24,6 +24,10 @@
         }
     }
 
+    &--no-top-margin {
+        margin-top: 0;
+    }
+
     &__heading {
         grid-column: 1 / span 2;
         margin-bottom: $gutter;
